[package]
authors = ["Norbert Pozar <bertapozar@gmail.com>"]
description = "A simple math expression parser and evaluator."
documentation = "https://docs.rs/meval"
homepage = "https://github.com/rekka/meval-rs"
keywords = ["math", "parser", "expression", "formula", "evaluator"]
license = "Unlicense/MIT"
name = "meval"
readme = "README.md"
repository = "https://github.com/rekka/meval-rs"
version = "0.0.8"
exclude = ["README.tpl", ".travis.yml"]

[dependencies]
fnv = "1.0.5"
nom = "1.0.0"
serde = { version = "0.9", optional = true }

[dev-dependencies]
gnuplot = "0.0.18"
serde_test = "0.9"
serde_derive = "0.9"
toml = "0.3"

[features]
default = ["serde"]

