[package]
authors = ["Norbert Pozar <bertapozar@gmail.com>"]
description = "A simple math expression parser and evaluator."
documentation = "https://docs.rs/meval"
homepage = "https://github.com/rekka/meval-rs"
keywords = ["math", "parser", "expression", "formula", "evaluator"]
license = "Unlicense/MIT"
name = "meval"
readme = "README.md"
repository = "https://github.com/rekka/meval-rs"
version = "0.2.0"
exclude = ["README.tpl", ".travis.yml"]

[dependencies]
fnv = "1.0.5"
nom = "1.0.0"
serde = { version = "1", optional = true }

[dev-dependencies]
gnuplot = "0.0.23"
serde_test = "1"
serde_derive = "1"
serde_json = "1"
toml = "0.4.5"

[features]
default = []

[package.metadata.docs.rs]
features = [ "serde" ]
